...
                            </tableView>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uCb-Z2-RVo">
                                <rect key="frame" x="0.0" y="573" width="375" height="44"/>
                                <subviews>
                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="HMm-6W-bZt">
                                        <rect key="frame" x="8" y="7" width="268" height="30"/>
                                        <accessibility key="accessibilityConfiguration" identifier="amountTextField"/>
                                        <nil key="textColor"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="decimalPad" returnKeyType="done"/>
                                    </textField>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Lfe-Zq-YiP">
                                        <rect key="frame" x="284" y="6" width="83" height="30"/>
                                        <constraints>
                                            <constraint firstAttribute="width" constant="83" id="AbL-sA-iQc"/>
                                        </constraints>
                                        <state key="normal" title="Calculate">
                                            <color key="titleColor" red="1" green="0.5" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                        </state>
                                        <connections>
                                            <action selector="calculateAction:" destination="o8f-H7-Ec6" eventType="touchUpInside" id="kQU-3n-5ix"/>
                                        </connections>
                                    </button>
...
                                    <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                    <subviews>
                                        <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="U1t-Aq-ivB">
                                            <rect key="frame" x="8" y="8" width="359" height="29"/>
                                            <segments>
                                                <segment title="" image="all cars"/>
                                                <segment title="" image="bmw"/>
                                                <segment title="" image="audi"/>
                                                <segment title="" image="mercedes-benz"/>
                                            </segments>
                                            <color key="tintColor" red="1" green="0.5" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                            <connections>
                                                <action selector="segmentedAction:" destination="mWg-W5-fMw" eventType="valueChanged" id="nQc-z3-kZf"/>
                                            </connections>
...
